; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/i2c/extr_i2c-core.c_i2c_smbus_add_pec.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/i2c/extr_i2c-core.c_i2c_smbus_add_pec.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.i2c_msg = type { i64, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.i2c_msg*)* @i2c_smbus_add_pec to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @i2c_smbus_add_pec(%struct.i2c_msg* %0) #0 {
  %2 = alloca %struct.i2c_msg*, align 8
  store %struct.i2c_msg* %0, %struct.i2c_msg** %2, align 8
  %3 = load %struct.i2c_msg*, %struct.i2c_msg** %2, align 8
  %4 = call i32 @i2c_smbus_msg_pec(i32 0, %struct.i2c_msg* %3)
  %5 = load %struct.i2c_msg*, %struct.i2c_msg** %2, align 8
  %6 = getelementptr inbounds %struct.i2c_msg, %struct.i2c_msg* %5, i32 0, i32 1
  %7 = load i32*, i32** %6, align 8
  %8 = load %struct.i2c_msg*, %struct.i2c_msg** %2, align 8
  %9 = getelementptr inbounds %struct.i2c_msg, %struct.i2c_msg* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = getelementptr inbounds i32, i32* %7, i64 %10
  store i32 %4, i32* %11, align 4
  %12 = load %struct.i2c_msg*, %struct.i2c_msg** %2, align 8
  %13 = getelementptr inbounds %struct.i2c_msg, %struct.i2c_msg* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = add i64 %14, 1
  store i64 %15, i64* %13, align 8
  ret void
}

declare dso_local i32 @i2c_smbus_msg_pec(i32, %struct.i2c_msg*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
